<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="MainActivity">

    <GridLayout
        android:id="@+id/glt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_grid"
        android:rowCount="3"
        android:columnCount="3"
        android:clickable="true"
        android:focusable="true">

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/left_top"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginStart="@dimen/margin_field"
            android:layout_marginTop="@dimen/margin_field"
            android:contentDescription="@string/left_top"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true" />

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/center_top"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/center_top"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/right_top"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/right_top"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/left_center"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/left_center"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/center_center"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/center_center"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/right_center"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/right_center"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/left_bottom"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/left_bottom"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/center_bottom"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/center_bottom"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

        <com.example.tictactoe.MyImageButton
            android:onClick="onCellClick"
            android:id="@+id/right_bottom"
            android:layout_width="@dimen/field"
            android:layout_height="@dimen/field"
            android:layout_marginTop="@dimen/margin_field"
            android:layout_marginStart="@dimen/margin_field"
            android:contentDescription="@string/right_bottom"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            android:src="@drawable/select"
            android:backgroundTint="@color/white"/>

    </GridLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearBoard"
        android:layout_gravity="center"
        android:textColor="@color/red"
        android:layout_marginTop="@dimen/margin_top_btn"
        android:backgroundTint="@color/black"/>
</LinearLayout>