<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="MainActivity">

        <GridLayout
            android:id="@+id/glt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:layout_gravity="center_horizontal"
            android:columnCount="3"
            android:clickable="false"
            android:focusable="true">

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/left_top"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginStart="@dimen/margin_field"
                android:layout_marginTop="@dimen/margin_field"
                android:contentDescription="@string/left_top"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="0,0"/>

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/center_top"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginTop="@dimen/margin_field"
                android:layout_marginStart="@dimen/margin_field"
                android:contentDescription="@string/center_top"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="1,0"/>

            <com.example.tictactoe.MyImageButton
                android:id="@+id/right_top"
                android:layout_width="120dp"
                android:layout_height="@dimen/field"
                android:layout_marginStart="@dimen/margin_field"
                android:layout_marginTop="@dimen/margin_field"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/right_top"
                android:cropToPadding="true"
                android:onClick="onCellClick"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:tag="2,0" />

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/left_center"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginTop="@dimen/margin_field"
                android:layout_marginStart="@dimen/margin_field"
                android:contentDescription="@string/left_center"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="0,1"/>

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/center_center"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginTop="@dimen/margin_field"
                android:layout_marginStart="@dimen/margin_field"
                android:contentDescription="@string/center_center"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="1,1"/>

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/right_center"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginTop="@dimen/margin_field"
                android:layout_marginStart="@dimen/margin_field"
                android:contentDescription="@string/right_center"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="2,1"/>

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/left_bottom"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginTop="@dimen/margin_field"
                android:layout_marginStart="@dimen/margin_field"
                android:contentDescription="@string/left_bottom"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="0,2"/>

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/center_bottom"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginTop="@dimen/margin_field"
                android:layout_marginStart="@dimen/margin_field"
                android:contentDescription="@string/center_bottom"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="1,2"/>

            <com.example.tictactoe.MyImageButton
                android:onClick="onCellClick"
                android:id="@+id/right_bottom"
                android:layout_width="@dimen/field"
                android:layout_height="@dimen/field"
                android:layout_marginTop="@dimen/margin_field"
                android:layout_marginStart="@dimen/margin_field"
                android:contentDescription="@string/right_bottom"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/select"
                android:backgroundTint="@color/white"
                android:tag="2,2"/>

        </GridLayout>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/main_font"
        android:text="@string/clearBoard"
        android:textColor="@color/red" />

</FrameLayout>